[package]
name = "wasm_test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
http-body-util = "0.1"
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.51"
tokio = { version = "1", features = ["full"] }
uuid7 = "0.7.2"

[dev-dependencies]
fake = "2.9.1"

[[bin]]
name = "server"
test = false
bench = false
