[package]
name = "wasm_test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
eyre = "0.6.11"
form_urlencoded = "1"
hyper = { version = "1.1.0", features = ["full"], optional = true }
hyper-util = { version = "0.1.2", features = ["full"], optional = true }
http-body-util = { version = "0.1", optional = true }
reqwest = { version = "0.11" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.51"
tokio = { version = "1", features = ["full"], optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.0", optional = true }
uuid7 = { version = "0.7.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.5.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
fake = { version = "2.9.1" }

[[bin]]
name = "server"
test = false
bench = false
required-features = ["server"]

[features]
server = ["dep:uuid7", "dep:tokio", "dep:hyper", "dep:http-body-util", "dep:hyper-util", "dep:tracing", "dep:tracing-subscriber"]
client = [] 
wasm-client = ["client", "dep:gloo-net", "gloo-net/http", "gloo-net/json"]