[package]
name = "pulcinella"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
cfg-if = "1.0.0"
clap = { version = "4.4", features = ["derive", "env"], optional = true }
eyre = "0.6.11"
form_urlencoded = "1"
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.51"
tower = { version = "0.4.3", optional = true }
tower-http = { version = "0.5.0", features = ["cors"], optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.0", features=["env-filter"], optional = true }
uuid7 = { version = "0.7.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.5.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
http-body-util = { version = "0.1" }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
fake = { version = "2.9.1" }

[[bin]]
name = "server"
test = false
bench = false
required-features = ["server"]

[features]
server = ["dep:uuid7", "dep:clap", "dep:tracing", "dep:tracing-subscriber", "dep:tower", "dep:tower-http"]
client = [] 
wasm-client = ["client", "dep:gloo-net", "gloo-net/http", "gloo-net/json"]
tests = ["dep:reqwest"]